# en-fonction-des-fonctions

./: .gitignore  CMakeLists.txt  Makefile  README.md  code-explained.md  config  config.default  efdf-evaluateur  efdf-syntaxe  en-fonction-des-fonctions  gitignore  grapheur  testgladetest  testtest
src/: Makefile  a.out  erreur_syntaxe.c  erreur_syntaxe.h  evaluateur.c  evaluateur.h  ex1.c  ex2.c  ex3.c  glt  glt.c  glt2.c  graphique.c  graphique.h  jeton.h  lexical.c  lexical.h  main-grapheur.c  main-hello.c  main-lexical.c  main.c  newsyntaxe.c  newsyntaxe.h  syntaxe.c  test2.glade  test3.glade  testglade.c  testgui.c
src/test/: syntaxe.c
